force-app/main/default/objects/Agreement_Execution_Document_Generation__c/Agreement_Execution_Document_Generation__c.object-meta.xml
<CustomObject>
    <label>Agreement Execution Document Generation</label>
    <nameField>
        <displayFormat>AG-{0000}</displayFormat>
        <label>Agreement Execution  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Executions Document Generation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>