force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/Agreement_Stamping_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Stamping_Date__c</fullName>
    <label>Agreement Stamping Date</label>
    <type>Date</type>
</CustomField>