force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>Loan_Applicant__r.Applicant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>