force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Agreement Executions Document Generation</relationshipLabel>
    <relationshipName>Agreement_Executions_Document_Generation</relationshipName>
    <type>Lookup</type>
</CustomField>