force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <label>Borrower</label>
    <length>255</length>
    <type>Text</type>
</CustomField>