force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KYC ID</fullName>
            </value>
            <value>
                <fullName>Property Document</fullName>
            </value>
            <value>
                <fullName>MOD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>