force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/Insured_Person__c.field-meta.xml
<CustomField>
    <fullName>Insured_Person__c</fullName>
    <label>Insured Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>