force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/Loan_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Applicant</label>
    <referenceTo>Loan_Applicant__c</referenceTo>
    <relationshipLabel>Agreement Executions Document Generation</relationshipLabel>
    <relationshipName>Agreement_Executions_Document_Generation</relationshipName>
    <type>Lookup</type>
</CustomField>