force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/Loan_Category__c.field-meta.xml
<CustomField>
    <fullName>Loan_Category__c</fullName>
    <label>Loan Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>2nd Tranche</fullName>
            </value>
            <value>
                <fullName>Balance Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>