force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/MOD_Date__c.field-meta.xml
<CustomField>
    <fullName>MOD_Date__c</fullName>
    <label>MOD Date</label>
    <type>Date</type>
</CustomField>