force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/No_of_years_known__c.field-meta.xml
<CustomField>
    <fullName>No_of_years_known__c</fullName>
    <label>No Of Years Known</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>