force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/Relationship_Between_Borrower_And_Witnes__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Between_Borrower_And_Witnes__c</fullName>
    <label>Relationship Between Borrower And Witnes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Uncle</fullName>
            </value>
            <value>
                <fullName>Aunty</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Wife</fullName>
            </value>
            <value>
                <fullName>Husband</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>In-law</fullName>
            </value>
            <value>
                <fullName>Grandfather</fullName>
            </value>
            <value>
                <fullName>Grandmother</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>