force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/Witness__c.field-meta.xml
<CustomField>
    <fullName>Witness__c</fullName>
    <label>Witness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>