force-app/main/default/objects/Agreement_Execution_Document_Generation__c/fields/Witness_Address__c.field-meta.xml
<CustomField>
    <fullName>Witness_Address__c</fullName>
    <label>Witness Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>