force-app/main/default/objects/Agreement_Execution_Document_Generation__c/recordTypes/Aadhar_Consent_Form.recordType-meta.xml
<RecordType>
    <fullName>Aadhar_Consent_Form</fullName>
    <active>true</active>
    <label>Aadhar Consent Form</label>
</RecordType>