force-app/main/default/objects/Agreement_Execution_Document_Generation__c/recordTypes/DPN.recordType-meta.xml
<RecordType>
    <fullName>DPN</fullName>
    <active>true</active>
    <label>DPN</label>
</RecordType>