force-app/main/default/objects/Agreement_Execution_Document_Generation__c/recordTypes/Form_60.recordType-meta.xml
<RecordType>
    <fullName>Form_60</fullName>
    <active>true</active>
    <label>Form 60</label>
</RecordType>