force-app/main/default/objects/Agreement_Execution_Document_Generation__c/recordTypes/Insurance_Undertaking_Letter.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Undertaking_Letter</fullName>
    <active>true</active>
    <label>Insurance Undertaking Letter</label>
</RecordType>