force-app/main/default/objects/Agreement_Execution_Document_Generation__c/recordTypes/MOD_amount_difference_letter.recordType-meta.xml
<RecordType>
    <fullName>MOD_amount_difference_letter</fullName>
    <active>true</active>
    <label>MOD amount difference letter</label>
</RecordType>