force-app/main/default/objects/Agreement_Execution_Document_Generation__c/recordTypes/MSME_Letter.recordType-meta.xml
<RecordType>
    <fullName>MSME_Letter</fullName>
    <active>true</active>
    <label>MSME Letter</label>
</RecordType>