force-app/main/default/objects/Agreement_Execution_Document_Generation__c/recordTypes/Original_Title_Deed_BM_OO_Declaration.recordType-meta.xml
<RecordType>
    <fullName>Original_Title_Deed_BM_OO_Declaration</fullName>
    <active>true</active>
    <label>Original Title Deed - BM/OO Declaration</label>
</RecordType>