force-app/main/default/objects/Agreement_Execution_Document_Generation__c/recordTypes/Property_Schedule_mismatch_letter.recordType-meta.xml
<RecordType>
    <fullName>Property_Schedule_mismatch_letter</fullName>
    <active>true</active>
    <label>Property Schedule mismatch letter</label>
</RecordType>