force-app/main/default/objects/Agreement_Execution_Document_Generation__c/recordTypes/Schedule_A.recordType-meta.xml
<RecordType>
    <fullName>Schedule_A</fullName>
    <active>true</active>
    <label>Schedule A</label>
</RecordType>