force-app/main/default/objects/Agreement_Execution_Document_Generation__c/recordTypes/Signature_Mismatch_Letter.recordType-meta.xml
<RecordType>
    <fullName>Signature_Mismatch_Letter</fullName>
    <active>true</active>
    <label>Signature Mismatch Letter</label>
</RecordType>