force-app/main/default/objects/Agreement_Execution_Document_Generation__c/recordTypes/Vernacular_LTI_Declaration.recordType-meta.xml
<RecordType>
    <fullName>Vernacular_LTI_Declaration</fullName>
    <active>true</active>
    <label>Vernacular / LTI Declaration</label>
</RecordType>